--- a/index.html
+++ b/index.html
@@ -13,7 +13,29 @@
     <meta property="og:description" content="A Tale of Two Cities (1858) is an historical novel by Charles Dickens, set in London and Paris before and during the French Revolution. The novel tells the story of the French Doctor Manette, hish 18-year-long imprisonment in the Bastille in Paris, and his release to life in London with his daughter Lucie, whom he had never met; Lucie's marriage and the collision between her beloved husband and the people who caused her father's imprisonment; and Monsieur and Madam Defarge, sellers of wine in a poor suburb of Paris. The story is set against the conditions that led up to the French Revolution and the Reign of Terror.">
   </head>
   <body>
-    <main class="text home">
+    <nav class="home-nav">
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="chapter1.html">Chapter One</a>
+        </li>
+        <li>
+          <a href="chapter2.html">Chapter Two</a>
+        </li>
+        <li>
+          <a href="chapter3.html">Chapter Three</a>
+        </li>
+        <li>
+          <a href="chapter4.html">Chapter Four</a>
+        </li>
+        <li>
+        <a href="chapter5">Chapter Five</a>
+        </li>
+      </ul>
+    </nav>
+    <main class="home">
       <h1 class="home-header">A Tale of Two Cities</h1>
       <p class="home-text">A novel by Charles Dickens</p>
     </main>
