Completed styling to step4; added images to chaps. fixed chap5 nav link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="chapter4.html">Chapter Four</a>
         </li>
         <li>
-        <a href="chapter5">Chapter Five</a>
+        <a href="chapter5.html">Chapter Five</a>
         </li>
       </ul>
     </nav>
