Tidied Code, changed text/background color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
       </ul>
     </nav>
-    <main class="home">
+    <main class="home text"> 
       <h1 class="home-header">A Tale of Two Cities</h1>
       <p class="home-text">A novel by Charles Dickens</p>
     </main>
